# compress

./: .gitignore  CMakeLists.txt  Makefile  compress  compress.c  huffman.c  huffman.h  huffman_test.c  huffman_tests  test.c  test2.c  unity.c  unity.h  unity_internals.h
include/: huffman_compress.h
src/: huffman_compress.c  main.c
tests/: huffman_tests.c  unity.c
tests/test_data/: test123.txt.huff
